--- a/Projects/Clipboard Website/package.json
+++ b/Projects/Clipboard Website/package.json
@@ -1,16 +1,16 @@
 {
   "name": "simple-tailwind-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple file structure for Tailwind projects",
   "main": "index.js",
   "scripts": {
     "build": "tailwindcss -i ./input.css -o ./css/style.css",
     "watch": "tailwindcss -i ./input.css -o ./css/style.css --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "Brad Traversy",
+  "license": "MIT",
   "devDependencies": {
-    "tailwindcss": "^3.0.24"
-  }
+    "tailwindcss": "^3.3.3"
+  },
+  "keywords": []
 }
