--- a/Projects/Testimonial Grid/package.json
+++ b/Projects/Testimonial Grid/package.json
@@ -10,6 +10,7 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4",
     "tailwindcss": "^3.3.3"
   },
   "keywords": []
